examples/type_system/failing/140_recursive_self_reference_return_precision.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/140_recursive_self_reference_return_precision.flx
// error[E300]: Annotation Type Mismatch
//
// The value of `value` does not match its type annotation.
//
//   examples/type_system/failing/140_recursive_self_reference_return_precision.flx:36:25
//    |
// 36 |     let value: String = countdown(2)
//    |                         ^^^^^^^^^^^^
//    |                         ------------ this value has type `Int`
//
//    |                ------ but `value` was annotated as `String`
//
// Note:
//   annotated type: String
//   value type: Int
//
// Help:
//   Try `to_string(...)` to convert a `Int` into a `String`.
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E300

fn countdown(n) {
    if n == 0 {
        0
    } else {
        countdown(n - 1)
    }
}

fn main() -> Unit {
    let value: String = countdown(2)
}
